Added Update Queue
